fix broken css

--- a/_sass/theme-style.scss
+++ b/_sass/theme-style.scss
@@ -137,7 +137,7 @@ h2, h3, h4 {
 
 .feature {
     background: $feature-bg;
-    border-bottom: 4px solid $feature-fg;
+    border-bottom: 4px solid $feature-h2-fg;
 
     h2 {
         color: $feature-h2-fg;
